tests/baselines/reference/YieldExpression16_es6.errors.txt
YieldExpression16_es6.ts(3,5): error TS1163: A 'yield' expression is only allowed in a generator body.


==== YieldExpression16_es6.ts (1 errors) ====
    function* foo() {
      function bar() {
        yield foo;
        ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
      }
    }